# design-pattern-lab

./: .gitignore  CMakeLists.txt  README.md
iterator/: CMakeLists.txt  main.cpp
iterator/header/: Container.hpp  Data.hpp  Iterator.hpp
observer/: CMakeLists.txt  main.cpp
observer/header/: Client.hpp  Observer.hpp  Subject.hpp  WeatherData.hpp
observer/src/: Client.cpp  WeatherData.cpp
singleton/: CMakeLists.txt  main  main.cpp
singleton/header/: Singleton.hpp
singleton/src/: Singleton.cpp
strategy/: CMakeLists.txt  main.cpp
strategy/header/: ConcreteStrategyA.hpp  ConcreteStrategyB.hpp  Context.hpp  Strategy.hpp
strategy/src/: ConcreteStrategyA.cpp  ConcreteStrategyB.cpp  Context.cpp
